syntax = "proto3";

package rivet.backend.pkg.mm.lobby_state_get;

import "legacy/proto/common.proto";

message Request {
	repeated rivet.common.Uuid lobby_ids = 1;
}

message Response {
	message Lobby {
		rivet.common.Uuid lobby_id = 1;
		optional string state_json = 2;
	}

	repeated Lobby lobbies = 1;
}
